# FlightControls

./: ALTERNATIVES.md  CMakeLists.txt  CMakeLists_alternatives_clean.txt  CMakeLists_original.txt  CMakeLists_simple.txt  CODE_FIXES_SUMMARY.md  PACKAGING_GUIDE.md  PROJECT_RESTRUCTURE.md  README.md  USAGE.md
docs/: ubuntu1804_setup.md
examples/: alternative_main.cpp  tab_launcher_main.cpp  virtual_desktop_ubuntu_demo.cpp  window_manager_simple.cpp
original_files/: ApplicationSwitcher.cpp  ApplicationSwitcher.h  MainWindow.cpp  MainWindow.h  ProcessManager.cpp  ProcessManager.h  WindowEmbedder.cpp  WindowEmbedder.h
scripts/: build_and_package.sh  check_dependencies.sh  check_status.sh  code_verification.ps1  create_deb_package.sh  create_rpm_package.sh  embedded_manager_test.ps1  final_verification.sh  fix_and_package.sh  fix_qgc_path.sh  fix_qt59_compatibility.sh  install.sh  install_qgroundcontrol.sh  package.sh  post_install_setup.sh  project_cleanup_verification.ps1  quick_fix_qgc.sh  quick_test.sh  setup_qgc_simple.sh  simple_verify.ps1  test_compile.sh  test_deb_creation.sh  test_launcher.ps1  test_package_structure.sh  ubuntu18_setup.sh  verify_restructure.ps1  verify_windows.bat  verify_windows.ps1
src/: ApplicationSwitcher.cpp  FlightControlsLauncher.cpp  FlightControlsLauncher.h  ProcessManager.cpp  TabBasedLauncher.cpp  TabBasedLauncher.h  VirtualDesktopManager.cpp  VirtualDesktopManager.h  WindowEmbedder.cpp  WindowManager.cpp  WindowManager.h  X11Helper.cpp  X11Helper.h  main.cpp  qt_compatibility.h
